This file documents the revision history for the Monitoring Webinterface Thruk.

1.1.2    ...
          - added /pnp/ to possible pnp4nagios urls
          - search in notes_url for pnp4nagios urls too
          - fixed commands using the hours parameter (fixes #50)
          - fixed redirect when adding ?nav=1 while using frames

1.1.1    Thu Sep 15 14:30:01 CEST 2011
          - added dashboard plugin (Thanks Sigma)
          - disabled not implemented config view (fixes #46)
          - fixed shift in table of config host page (fixes #49)

1.1.0    Sun Aug 21 19:12:18 CEST 2011
          - availability / trends are now calculated in a background process
            - less ressources and independent from browser ttl
          - excel export run as bg job
          - added config option 'show_custom_vars'
          - added host command 'Schedule downtime for all services on this host'
          - added excel export for notifications
          - added new host properties filter 'in_check_priod' and 'in_notification_period'
          - added new service properties filter 'in_check_priod' and 'in_notification_period'
          - added new filter options 'Check Period' and 'Notification Period'
          - added new filter option 'Has Modified Attributes'
          - added new command to reset 'Modified Attributes'
          - added option 'show_modified_attributes'
          - fixed disappearing menu item name (fixes #45)
          - fixed changing views on the minemap (fixes #44)
          - fixed statusmap in IE
          - fixed too long url in status.cgi

1.0.9    Sun Aug 14 12:47:30 CEST 2011
          - delete multiple comments from the comments page
          - delete multiple downtimes from the downtimes page
          - new option command_reschedule_alias to redirect reschedule requests to agent services
          - themes: themes can be enabled/disabled by themes/themes-enabled directory (just like plugins)