@@ -61,7 +61,7 @@ requires 'Catalyst::Plugin::CustomErrorMessage'   => 0;     # required by Thruk
 requires 'Catalyst::Plugin::Redirect'             => 0;     # required by Thruk
 requires 'Catalyst::Plugin::Compress'             => 0;     # required by Thruk
 requires 'Catalyst::Plugin::Cache'                => 0;     # required by Thruk
-requires 'Catalyst::Log::Log4perl'                => 0;     # required by Thruk
+requires 'Log::Log4perl::Catalyst'                => 0;     # required by Thruk
 requires 'Catalyst::Engine::FastCGI'              => 0;     # required by Thruk
 requires 'FCGI'                                   => 0;     # required by Thruk
 requires 'FCGI::ProcManager'                      => 0;     # required by Thruk
