@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 1.1.2    ...
           - added /pnp/ to possible pnp4nagios urls
           - search in notes_url for pnp4nagios urls too
+          - replaced deprecated Catalyst::Log::Log4perl
           - fixed commands using the hours parameter (fixes #50)
           - fixed redirect when adding ?nav=1 while using frames
 
